manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delta-sharing-server
  labels:
    app: delta-sharing-server
    project: delta-sharing-server
  annotations:
    zenoss.spinnaker_deploy: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delta-sharing-server
  template:
    metadata:
      labels:
        app: delta-sharing-server
    spec:
      serviceAccountName: dl-sharing
      containers:
        - name: delta-sharing-server-api-proxy
          image: gcr.io/zing-registry-188222/zc-api-proxy:1.3.5
          imagePullPolicy: Always
          ports:
          - containerPort: 9000
            protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 50M
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 512
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: delta-sharing-server
          image: delta-sharing
          args: ["--config", "/config/delta-sharing-server-config.yaml"]
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: shared-config
              mountPath: /config
              readOnly: true
          resources:
            requests:
              memory: "4Gi"
              cpu: "200m"
            limits:
              memory: "6Gi"
              cpu: "800m"
      volumes:
        - name: base-config
          configMap:
            name: delta-sharing-base-config
        - name: shares-config
          configMap:
            name: delta-sharing-shares-config
        - name: shared-config
          emptyDir: {}
